--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kenneth's Page</title>
+    <title>Nefertia's Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                      <span class="light">Kenneth Watkins </span> 
+                      <span class="light">Nefertia Jones</span> 
                 </a>
             </div>
 
@@ -52,11 +52,12 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Portfolio (Work Experience)</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -75,7 +76,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Welcome</h1>
-                        <p class="intro-text">Welcome to my Portfolio page.</p>
+                        <p class="intro-text">Hello! My name is Nefertia Jones. Welcome to my Portfolio page. Feel free to browse. If you any questions, contact me via email.  </p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -91,7 +92,7 @@
             <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About me</h2>
- <p> Hello!  I am a developer in Chicago. I like to listen to music and play laser tag.</p>
+ <p> Hello! My name is Nefertia Jones. I am currently a 16 year old junior at Morgan Park High School in Chicago, Illinois. I am involved in a lot of educational activities such as the Math Team, Debate Team, and two Honor Societies (National Honor Society, and National Society Of High School Scholars). Not only am I a high school student, I am a Dual Enrollment student. This means I am enrolled in High School and College classes at the same time. I am taking college mathematics, biology, and psychology classes at Kennedy-King College, and IB (International Baccalaureate) classes at my high school. I am also a Blue 1647 intern, which taught me how to make websites, and mobile apps. I was also an attendee of the Samsung Mobile App Academy, which also taught me how to make apps. </p>
             </div>
             </div>
         </div>
@@ -104,8 +105,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="loud">My Portfolio</h2>
                     <p>Here is a list of my projects</p>
-                    <a href="/" class="btn btn-default btn-lg">Flappy Boxes</a>
-                    <a href="/" class="btn btn-default btn-lg">CTA App</a>
+                    <a href="https://github.com/nefertia" class="btn btn-default btn-lg">Flappy Boxes</a>
+                    <a href="https://github.com/nefertia" class="btn btn-default btn-lg">CTA App</a>
                 </div>
             </div>
         </div>
@@ -116,18 +117,18 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="loud">Contact Me</h2>
-                <p>Feel free to contact me anytime!</p>
-                <p><a href="mailto:kenneth@blue1647.com">kenneth@blue1647.com</a>
+                <p>Feel free to contact me anytime, and I will get back as soon as possible!</p>
+                <p><a href="mailto:nefertiajj@gmail.com">nefertiajj@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/kennethjulian" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="http://instagram.com/_ambitious16/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/virtica" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/nefertia" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/virtica" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/nefertia.jones" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                 </ul>
             </div>
@@ -137,7 +138,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; 2014</p>
+            <p>Copyright &copy; 2014 Nefertia Jones</p>
         </div>
     </footer>
 
