--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="loud">My Portfolio</h2>
                     <p>Here is a list of my projects</p>
-                    <a href="https://github.com/nefertia" class="btn btn-default btn-lg">Flappy Boxes</a>
+                    <a href="https://github.com/nefertia/FlappyBox" class="btn btn-default btn-lg">Flappy Boxes</a>
                     <a href="https://github.com/nefertia" class="btn btn-default btn-lg">CTA App</a>
                 </div>
             </div>
